[package]
name = "eip7702-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
alloy = { version = "1.0", features = ["eip712", "node-bindings"] }
alloy-eips = "1.0"
eyre = "0.6"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
